force-app/main/default/objects/Batch_Receipt_Report_Item__c/Batch_Receipt_Report_Item__c.object-meta.xml
<CustomObject>
    <label>Batch Receipt Report Item</label>
    <nameField>
        <displayFormat>BRRI-{0000000}</displayFormat>
        <label>Batch Receipt Report Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Receipt Report Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>