force-app/main/default/objects/Batch_Receipt_Report_Item__c/fields/Acquirer_Account__c.field-meta.xml
<CustomField>
    <fullName>Acquirer_Account__c</fullName>
    <label>Acquirer Account</label>
    <length>20</length>
    <type>Text</type>
</CustomField>