force-app/main/default/objects/Batch_Receipt_Report_Item__c/fields/Bank_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Bank_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Receipt</label>
    <referenceTo>Zumzum__Bank_Receipt__c</referenceTo>
    <relationshipLabel>Batch Receipt Report Items</relationshipLabel>
    <relationshipName>Batch_Receipt_Report_Items</relationshipName>
    <type>Lookup</type>
</CustomField>