force-app/main/default/objects/Batch_Receipt_Report_Item__c/fields/Batch_Receipt_Report__c.field-meta.xml
<CustomField>
    <fullName>Batch_Receipt_Report__c</fullName>
    <label>Batch Receipt Report</label>
    <referenceTo>Batch_Receipt_Report__c</referenceTo>
    <relationshipLabel>Batch Receipt Report Items</relationshipLabel>
    <relationshipName>Batch_Receipt_Report_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>