force-app/main/default/objects/Batch_Receipt_Report_Item__c/fields/Captured_On__c.field-meta.xml
<CustomField>
    <fullName>Captured_On__c</fullName>
    <label>Captured On</label>
    <type>Date</type>
</CustomField>