force-app/main/default/objects/Batch_Receipt_Report_Item__c/fields/Internal_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Internal_Order_Id__c</fullName>
    <label>Internal Order Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>