force-app/main/default/objects/Batch_Receipt_Report_Item__c/fields/Ledger__c.field-meta.xml
<CustomField>
    <fullName>Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ledger</label>
    <referenceTo>Zumzum__Ledger__c</referenceTo>
    <relationshipLabel>Batch Receipt Report Items</relationshipLabel>
    <relationshipName>Batch_Receipt_Report_Items</relationshipName>
    <type>Lookup</type>
</CustomField>