force-app/main/default/objects/Batch_Receipt_Report_Item__c/fields/Order_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_Code__c</fullName>
    <label>Order Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>