force-app/main/default/objects/Batch_Receipt_Report_Item__c/fields/Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Id__c</fullName>
    <label>Payment Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>