force-app/main/default/objects/Batch_Receipt_Report_Item__c/validationRules/Only_Receipt_Or_Payment_Can_Be_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Receipt_Or_Payment_Can_Be_Populated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Bank_Payment__c)),
    NOT(ISBLANK(Bank_Receipt__c))
)</errorConditionFormula>
    <errorMessage>Only Bank Receipt or Bank Payment can be entered.</errorMessage>
</ValidationRule>